Applied the DRY principle

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<title>IC "Repair Design Project"</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Yeseva+One&display=swap" rel="stylesheet">
+	<!-- The above style should remain in the same place because it contains variables -->
+	<link rel="stylesheet" href="variables.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="mobile.css">
 </head>
