Applied the YAGNI principle

--- a/Learning-JavaScript-Course-Task.optimized/task2/index.html
+++ b/Learning-JavaScript-Course-Task.optimized/task2/index.html
@@ -6,33 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вторая задача</title>
 </head>
-<body style="display: none;">
+<body>
   <!-- Я думаю, что console.log, alert, prompt лучше называть функциями, а не командами. -->
-  <blockquote>
-      <p>Пример использования функции <code>console.log</code></p>
-      <br>
-      <button id="consoleLog">console.log</button>
-  </blockquote>
+  <p>Пример использования функции <code>console.log</code></p>
+  <br>
+  <button id="consoleLog">console.log</button>
 
-  <blockquote>
-      <p>Пример использования функции <code>alert</code></p>
-      <br>
-      <button id="alert">Alert()</button>
-  </blockquote>
+  <p>Пример использования функции <code>alert</code></p>
+  <br>
+  <button id="alert">Alert()</button>
 
-  <blockquote>
-    <p>Пример использования функции <code>confirm</code></p>
-    <br>
-    <button id="confirm">Confirm()</button>
-  </blockquote>
+  <p>Пример использования функции <code>confirm</code></p>
+  <br>
+  <button id="confirm">Confirm()</button>
 
-  <blockquote>
-      <p>Пример использования функции <code>prompt</code></p>
-      <br>
-      <button id="prompt">Prompt()</button>
-  </blockquote>
+  <p>Пример использования функции <code>prompt</code></p>
+  <br>
+  <button id="prompt">Prompt()</button>
 
   <script src="script.js"></script>
-  <script src="../add-important-elements.js"></script>
 </body>
 </html>
