--- a/Learning-JavaScript-Course-Task.optimized/task1/index.html
+++ b/Learning-JavaScript-Course-Task.optimized/task1/index.html
@@ -6,34 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Первая задача</title>
 </head>
-<body style="display: none;">
+<body>
     <p>Посмотри в консоль, там что-то важное</p>
-    <p>Хотя <i>наверное</i> неважное, но всё равно смотри в консоль</p>
-    <p>Как открыть консоль.</p>
-    <ul>
-        <li>
-            <ul>
-                <li>F12</li>
-                <li>CTRL+Shift+I</li>
-                <li>CTRL+Shift+J</li>
-            </ul>
-        </li>
-        <li>
-            После этих действий, если не открыта вкладка Console или Консоль, открой эту вкладку
-        </li>
-    </ul>
-
-    <p>✅ Вуаля</p>
-    <p>Chrome:</p>
-    <img class="console-screenshot" src="chrome-console.png" alt="Консоль Chrome">
-
-    <p>Firefox:</p>
-    <img class="console-screenshot" src="firefox-console.png" alt="Консоль Firefox">
-
-    <p><b>Остальные браузеры обычно основаны на том же Chromium (на котором основан Chrome) или Firefox, так что, думаю, их нет смысла показывать.</b></p>
-    <p>Ну а пользователи экзотических браузеров, тут уже надо смотреть по конкретному браузеру.</p>
     
     <script src="script.js"></script>
-    <script src="../add-important-elements.js"></script>
 </body>
 </html>
